cmake_minimum_required(VERSION 3.19)
project(C C)

set(CMAKE_C_STANDARD 90)

add_executable(C main.c)
add_executable(Test Test.c)
add_executable(i.p i.p.c)
add_executable(Strcut.Test Strcut.Test.c)
add_executable(Stack Stack.c)
add_executable(StackLink StackLink.c)
add_executable(LNodeLink LNodeLink.c)
add_executable(Queue Queue.c)
add_executable(QueueLink QueueLink.c)
add_executable(BinTree BinTree.c )
add_executable(LNode LNode.c)
add_executable(String String.c)
add_executable(calc.1 calc.1.c)
add_executable(CT01 CT01.c)

add_executable(1st C_Premium/1st.c)
add_executable(2nd C_Premium/2nd.c)
add_executable(3rd C_Premium/3rd.c)
add_executable(4th C_Premium/4th.c)
add_executable(5th C_Premium/5th.c)
add_executable(6th C_Premium/6th.c)
add_executable(7th C_Premium/7th.c)
add_executable(8th C_Premium/8th.c)
add_executable(9th C_Premium/9th.c)
add_executable(10th C_Premium/10th.c)
add_executable(11th C_Premium/11th.c)
add_executable(Hello Hello.c)